// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multiple lines of a crash log 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          Pod crashed!
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek the container crashed
          </span>
        </code>
        <code>
          <span
            className={null}
            style={null}
          >
            no but really it crashed
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`renders no errors 1`] = `
<section
  className="ErrorPane"
>
  <section
    className="Pane-empty-message"
  >
    <svg>
      logo-wordmark-gray.svg
    </svg>
    <h2>
      No Alerts Found
    </h2>
  </section>
</section>
`;

exports[`renders one build error 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            laa dee daa I'm an error
          </span>
        </code>
        <code>
          <span
            className={null}
            style={null}
          >
            for real I am
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`renders one container start error 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek there is a problem
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`renders one container start error 2`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek there is a problem
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`renders the last build with an error 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            67yr
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            laa dee daa I'm another error
          </span>
        </code>
        <code>
          <span
            className={null}
            style={null}
          >
            Better watch out
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`shows that a container has restarted 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          Restarts: 1
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek the container crashed
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`shows that a crash rebuild has occurred 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          Pod crashed!
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            Eeeeek the container crashed
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;
